# coding-problems

./: .gitignore
.github/workflow/: check.yml
.github/workflows/: check.yml
advent-of-code/: .gitignore
advent-of-code/2023/Day1/part1/: main.cpp
advent-of-code/2023/Day1/part2/: main.cpp
advent-of-code/2023/Day2/part1/: main.cpp
advent-of-code/2023/Day2/part2/: main.cpp
advent-of-code/2023/Day3/part1/: main.cpp  out.txt
advent-of-code/2024/day_1/: main.c
advent-of-code/2024/day_1/part1/: Makefile  main.c
advent-of-code/2024/day_1/part2/: main.c
advent-of-code/2024/day_2/part1/: main.c
kattis/: CMakeLists.txt  Makefile
kattis/1dfroggereasy/: 1dfrogger.c
kattis/3dprinter/: 3dprinter.c  README.md
kattis/asciikassi/: README.md  asciikassi.cpp
kattis/different/: different.c
kattis/ekkidaudi/: README.md  ekkidaudi.cpp
kattis/fimmtudagstilbod/: README.md  fimmtudagstilbod.c
kattis/hipphipp/: README.md
kattis/hipphipp/src/: main.rs
kattis/ofugsnuid/: README.md  ofugsnuid.c
kattis/rationalsequence2/: rationalsequence2.c
kattis/shortcuttowhat/: README.md  shortcuttowhat.c
kattis/tilhamingju/: README.md  tilhamingju.c
kattis/vefthjonatjon/: README.md  Vefthjonatjon.cpp
kattis/velkomin/: README.md  velkomin.cpp
